--- a/index.html
+++ b/index.html
@@ -58,12 +58,25 @@
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script>
-  window.addEventListener('keydown', function(e) {
-    const audio = document.querySelector(`audio[data-key=$"{e.keyCode}"]`);
+
+  function playSound(e) {
+    const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
+    const key = document.querySelector(`key[data-key="${e.keyCode}"]`);
     if (!audio) return; //stop the function running altogether
     audio.currentTime = 0; // rewind to start
     audio.play();
-  });
+    key.classList.add('playing');
+  }
+
+function removeTransition(e) {
+  if (e.propertyName !== 'transform') return; // if it's not a transform, skip it
+  this.classList.remove('playing');
+}
+
+const keys = document.querySelectorAll('.key');
+keys.forEach(key => key.addEventListener('transitioned', removeTransition));
+window.addEventListener('keydown', playSound);
+
 </script>
 
 
